@@ -19,7 +19,7 @@ Changes Since 0.12
 * docutils/nodes.py
 
   - Fix [ 253 ] Attribute key without value not allowed in XML.
-  
+
 * docutils/parsers/
 
   - Apply [ 103 ] Recognize inline markups without word boundaries.
@@ -90,6 +90,8 @@ Changes Since 0.12
     by the same author).
 
   - Fix [ 286 ] Empty column title cause invalid latex file.
+
+  - Fix [ 224 ] Fix rowspan support for tables.
 
 * docutils/writers/odf_odt/__init__.py
 
